# ink-contract-test

./: .gitmodules  Cargo.toml  README.md
release/: services_market.contract  services_market.json  services_market.wasm  services_statistics.contract  services_statistics.json  services_statistics.wasm
src/: main.rs
